--- a/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
+++ b/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
@@ -42,7 +42,7 @@
               'pi-heart text-600': !liked,
               'pi-heart-fill text-blue-500': liked
             }"
-            (click)="!liked =liked; deleteFavorites(product.id)"
+            (click)="liked =!liked; deleteFavorites(product.id)"
           ></i>
           </div>
         </div>
