--- a/src/app/pages/components/orders/default-content/default-content.component.html
+++ b/src/app/pages/components/orders/default-content/default-content.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="card justify-content-center align-content-center w-full">
       <span class="button-style flex">
-        <button class="button " routerLink="/product">
+        <button class="button " [routerLink]="['/pages/product']">
           {{ "ordersForm.buttonLabel" | transloco }}
         </button>
       </span>
