--- a/src/app/pages/components/support/support.component.html
+++ b/src/app/pages/components/support/support.component.html
@@ -82,7 +82,7 @@
     </div>
     <div class="card justify-content-center align-content-center ">
      <span class="button-style">
-      <button pButton routerLink="/product" class="button w-full justify-content-center mt-2">{{'helpsupportForm.buttonLabel' | transloco}}</button>
+      <button pButton [routerLink]="['/pages/product']" class="button w-full justify-content-center mt-2">{{'helpsupportForm.buttonLabel' | transloco}}</button>
      </span>
     </div>
     </div>
