--- a/src/app/pages/components/orders/content-table/content-table.component.html
+++ b/src/app/pages/components/orders/content-table/content-table.component.html
@@ -1,57 +1,50 @@
-<div class="flex w-full container-table">
-  <div class="table">
-    <p-table
-      [value]="product"
-      [scrollable]="true"
-      scrollHeight="800px"
-      styleClass="table"
-    >
-      <ng-template pTemplate="header">
-        <tr>
-          <th>{{'ordersForm.id' | transloco}}</th>
-          <th>{{'ordersForm.image' | transloco}}</th>
-          <th>{{'ordersForm.name' | transloco}}</th>
-          <th>{{'ordersForm.stock' | transloco}}</th>
-          <th>{{'ordersForm.category' | transloco}}</th>
-          <th>{{'ordersForm.status' | transloco}}</th>
-          <th>{{'ordersForm.totalPrice' | transloco}}</th>
-          <th>{{'ordersForm.actions' | transloco}}</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-product>
-        <tr>
-          <td>{{ product.id }}</td>
-          <td>
-            <img
-              class="w-9 shadow-2 border-round"
-              [src]="
-                'https://primefaces.org/cdn/primeng/images/demo/product/' +
-                product?.file
-              "
-              [alt]="product.name"
-              width="40px"
-              height="40px"
-            />
-          </td>
-          <td>{{ product.name }}</td>
-          <td>{{ product.quantity }}</td>
-          <td>{{ product.category }}</td>
-          <td><p-tag
+<div class="surface-section px-4 py-8 md:px-6 lg:px-8 border-1 surface-border border-round">
+  <div class="flex flex-column md:flex-row justify-content-between align-items-center mb-4">
+    <div class="flex flex-column text-center md:text-left">
+      <span class="text-900 text-2xl mb-2">My Orders</span>
+    </div>
+  </div>
+  <div class="surface-card grid grid-nogutter border-round shadow-2 mb-6" *ngFor="let order of products">
+    <div class="col-12 flex p-2 surface-100 border-round-top">
+      <div class="p-2 flex-auto text-center md:text-left">
+        <span class="text-700 block">Order Number</span>
+        <span class="text-900 font-medium block mt-2">{{ order.id }}</span>
+      </div>
+      <p-divider align="center" layout="vertical" styleClass="h-full mx-0 lg:mx-3 surface-border"></p-divider>
+      <div class="p-2 flex-auto text-center md:text-left">
+        <span class="text-700 block">buyer name</span>
+        <span class="text-900 font-medium block mt-2">Orion I.</span>
+      </div>
+      <p-divider align="center" layout="vertical" styleClass="h-full mx-0 lg:mx-3 surface-border"></p-divider>
+      <div class="p-2 flex-auto text-center md:text-left">
+        <span class="text-700 block">Total Amount</span>
+        <span class="text-900 font-medium block mt-2"> $ {{ order.totalAmount }}</span>
+      </div>
+    </div>
+
+    <div class="col-12">
+      <div class="p-2 my-4 flex flex-column lg:flex-row justify-content-between align-items-center" *ngFor="let product of order.orders; let i = index;">
+        <div class="flex flex-column lg:flex-row justify-content-center align-items-center px-2">
+          <img [src]="
+          'https://primefaces.org/cdn/primeng/images/demo/product/' +
+          product?.file
+        " alt="product" class="w-8rem h-8rem mr-3 flex-shrink-0" />
+          <div class="flex flex-column my-auto text-center md:text-left">
+            <span class="text-900 font-medium mb-3 mt-3 lg:mt-0">{{ product.name }}</span>
+            <span class="text-700 text-sm mb-3">{{ product.quantity }}</span>
+            <a pRipple tabindex="0" class="p-2 select-none cursor-pointer w-10rem mx-auto lg:mx-0 border-round font-medium text-center border-1 border-primary text-primary transition-duration-150">Buy Again <span class="font-light">| {{ product.priceStacked }}</span></a>
+          </div>
+        </div>
+        <div class="bg-gray-100 mr-0 lg:mr-3 mt-4 lg:mt-0 p-2 flex align-items-center" [style.border-radius]="'2.5rem'">
+          <span class="text-black-500">
+            <p-tag
             [value]="product?.selectedStatus"
             [severity]="getSeverity(product)"
-          ></p-tag></td>
-          <td>$ {{ product.priceStacked }}</td>
-          <td class="button-style">
-           <div>
-            <i
-            class="button pi pi-trash"
-            style="color: #3498db;"
-            (click)="deleteOrders(product.id)"
-          ></i>
-           </div>
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
+          ></p-tag>
+          </span>
+        </div>
+        <p-divider *ngIf="i !== order.orders.length-1" class="w-full block lg:hidden surface-border"></p-divider>
+      </div>
+    </div>
   </div>
 </div>
