--- a/src/app/pages/components/orders/orders.component.scss
+++ b/src/app/pages/components/orders/orders.component.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-height: 100vh; // Sayfa yüksekliğine uyumlu
+  max-height: auto; // Sayfa yüksekliğine uyumlu
 
   .content {
     text-align: center;
@@ -24,8 +24,8 @@
       // app-content-table bileşeni için özel stil ekleyebilirsiniz
       width: 100%; // Tam genişlik
       padding: 20px; // Kenar boşlukları
-    
-     
+
+
     }
 
     app-default-content {
