--- a/src/app/pages/components/navbar-list/navbar-list.component.html
+++ b/src/app/pages/components/navbar-list/navbar-list.component.html
@@ -30,8 +30,10 @@
           </a>
         </li>
         <li class="menu-item">
+          <i class="pi pi-user-plus">
+          </i>
           <a [routerLink]="['/pages','creoter-form']">
-            To be Creoter
+            {{'navigationForm.seller' | transloco}}
           </a>
         </li>
         <li class="menu-item">
