--- a/src/app/pages/components/creoter-form/creoter-form.component.scss
+++ b/src/app/pages/components/creoter-form/creoter-form.component.scss
@@ -134,6 +134,7 @@ $background-color: #ecf0f1;
       button {
         width: 100%;
         padding: 15px;
+        margin-top:10px;
         background-color: $primary-color;
         color: $light-text;
         font-size: 1rem;
