--- a/src/app/pages/components/favorites/content-favorites/content-favorites.component.scss
+++ b/src/app/pages/components/favorites/content-favorites/content-favorites.component.scss
@@ -57,7 +57,7 @@
 
   // Kartın genel özellikleri
   .surface-card-parent {
-    background-color: #ffffff;
+    background: transparent;
     border: 1px solid #e1e1e1;
     border-radius: 0.75rem;
     padding: 15px;
