--- a/src/app/pages/components/product/card-detail/card-detail.component.scss
+++ b/src/app/pages/components/product/card-detail/card-detail.component.scss
@@ -17,7 +17,9 @@ $background-color: #ecf0f1;
   p-inputnumber , .p-inputnumber{
     width: 85%;
   }
-
+  .p-icon{
+    color: RGB(255,170,74);
+  }
   .valueInput{
     width: 100%;
      input{
