--- a/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.scss
+++ b/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.scss
@@ -1,11 +1,23 @@
-form{
+$primary-color: #3498db;
+$secondary-color: #1071b3;
+$danger-color: #e74c3c;
+$dark-text: #34495e;
+$light-text: #ecf0f1;
+$background-color: #ecf0f1;
+form {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
-.wrapper{
+.wrapper {
   display: flex;
   margin: auto 30px auto 30px;
   float: left;
+
+  label{
+    margin-bottom: 5px;
+    display: flex;
+    font-size: 1rem;
+  }
 }
 .custom-file-input {
   width: 100%;
@@ -24,8 +36,85 @@ form{
   background-color: #e0e0e0;
   color: #000;
 }
+.button-style {
+  text-align: center;
+  margin-top: 20px;
 
-input{
-  padding-left: 5px;
+  button {
+    width: 100%;
+    padding: 15px;
+    background-color: $primary-color;
+    color: $light-text;
+    font-size: 1rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: $secondary-color;
+    }
+  }
 }
 
+input ,textarea , .custom-file-input{
+  width: 100%;
+  padding: 15px;
+  padding-left: 10px;
+  font-size: 1rem;
+  border: 1px solid $primary-color;
+  background-color: transparent;
+  color: $dark-text;
+  transition: border-color 0.3s;
+
+  &:focus {
+    outline: none;
+    border-bottom: 2px solid $secondary-color;
+  }
+}
+
+:host ::ng-deep{
+  .p-element{
+    input {
+    width: 100%;
+    padding: 15px;
+    padding-left: 10px;
+    font-size: 1rem;
+    border: 1px solid $primary-color;
+    background-color: transparent;
+    color: $dark-text;
+    transition: border-color 0.3s;
+
+    &:focus {
+      outline: none;
+      border-bottom: 2px solid $secondary-color;
+    }
+    }
+
+    .p-dropdown{
+    width: 100%;
+    padding-left: 10px;
+    font-size: 1rem;
+    border: 1px solid $primary-color;
+    background-color: transparent;
+    color: $dark-text;
+    transition: border-color 0.3s;
+
+    &:focus {
+      outline: none;
+      border-bottom: 2px solid $secondary-color;
+    }
+    }
+
+  }
+  .field-checkbox{
+    .p-radiobutton-box{
+      border: 1px solid $primary-color;
+    }
+    label{
+      color: #000;
+      margin-right: 10px;
+    }
+  }
+
+}
