--- a/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
+++ b/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
@@ -10,31 +10,24 @@
             <span
               class="surface-card text-900 shadow-2 px-3 py-2 absolute"
               style="border-radius: 1.5rem; left: 1rem; top: 1rem"
-              >{{product.category}}</span
+              >{{product?.category.name}}</span
             >
             <img
-              [src]="
-                'https://primefaces.org/cdn/primeng/images/demo/product/' +
-                product?.file
-              "
+              [src]="getFileUrl(product?.file)"
               [alt]="product?.name"
               class="w-full"
             />
           </div>
           <div class="flex justify-content-between align-items-start mb-3">
-            <span class="text-900 font-medium text-xl">{{product.name}}</span>
-            <span>
-              <i class="pi pi-star-fill text-yellow-500 mr-1"></i>
-              <span class="font-medium">{{product.rating}}</span>
-            </span>
+            <span class="text-900 font-medium text-xl">{{product?.name}}</span>
           </div>
           <p class="mt-0 mb-3 text-700 line-height-3">
-            {{product.description}}
+            {{product?.description}}
           </p>
 
           <div class="flex flex-row w-full justify-content-between">
             <span class="text-xl font-medium"> ${{
-              product.priceStacked
+              product?.priceStacked
             }}</span>
             <i
             class="pi text-2xl cursor-pointer ml-3"
