--- a/src/app/pages/components/orders/content-table/content-table.component.html
+++ b/src/app/pages/components/orders/content-table/content-table.component.html
@@ -11,10 +11,6 @@
         <span class="text-900 font-medium block mt-2">{{ order.id }}</span>
       </div>
       <p-divider align="center" layout="vertical" styleClass="h-full mx-0 lg:mx-3 surface-border"></p-divider>
-      <div class="p-2 flex-auto text-center md:text-left">
-        <span class="text-700 block">buyer name</span>
-        <span class="text-900 font-medium block mt-2">Orion I.</span>
-      </div>
       <p-divider align="center" layout="vertical" styleClass="h-full mx-0 lg:mx-3 surface-border"></p-divider>
       <div class="p-2 flex-auto text-center md:text-left">
         <span class="text-700 block">Total Amount</span>
@@ -25,10 +21,7 @@
     <div class="col-12">
       <div class="p-2 my-4 flex flex-column lg:flex-row justify-content-between align-items-center" *ngFor="let product of order.orders; let i = index;">
         <div class="flex flex-column lg:flex-row justify-content-center align-items-center px-2">
-          <img [src]="
-          'https://primefaces.org/cdn/primeng/images/demo/product/' +
-          product?.file
-        " alt="product" class="w-8rem h-8rem mr-3 flex-shrink-0" />
+          <img [src]="getFileUrl(product?.file)" alt="product" class="w-8rem h-8rem mr-3 flex-shrink-0" />
           <div class="flex flex-column my-auto text-center md:text-left">
             <span class="text-900 font-medium mb-3 mt-3 lg:mt-0">{{ product.name }}</span>
             <span class="text-700 text-sm mb-3">{{ product.quantity }}</span>
@@ -38,7 +31,7 @@
         <div class="bg-gray-100 mr-0 lg:mr-3 mt-4 lg:mt-0 p-2 flex align-items-center" [style.border-radius]="'2.5rem'">
           <span class="text-black-500">
             <p-tag
-            [value]="product?.selectedStatus"
+            [value]="product?.selectedStatus.name"
             [severity]="getSeverity(product)"
           ></p-tag>
           </span>
