--- a/src/app/pages/components/product/card/card.component.html
+++ b/src/app/pages/components/product/card/card.component.html
@@ -19,7 +19,7 @@
     [sortField]="sortField"
     [sortOrder]="sortOrder"
     [showCurrentPageReport]="true"
-     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [rowsPerPageOptions]="[10, 25, 50]"
   >
     <ng-template pTemplate="header">
@@ -29,54 +29,62 @@
     </ng-template>
     <ng-template let-product pTemplate="listItem">
       <div class="col-12">
-        <a [routerLink]="['/pages/product',product.id]" class="product-id">
+        <a
+          [routerLink]="['/pages/product', product.id]"
+          class="product-id"
+        >
           <div
             class="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4"
           >
             <div
               class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1 gap-4"
             >
-
               <div
                 class="flex flex-column align-items-center sm:align-items-start gap-3"
               >
-              <img
-                class="w-9 shadow-2 border-round"
-                [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.file" [alt]="product.name"
-              />
+                <img
+                  class="w-9 shadow-2 border-round"
+                  [src]="getFileUrl(product?.file)"
+                  [alt]="product?.name"
+                  width="200px"
+                  height="200px"
+                />
                 <div class="text-2xl font-bold text-900">
-                  {{ product.name }}
-
+                  {{ product?.name }}
                 </div>
                 <p-rating
-                  [ngModel]="product.rating"
+                  [ngModel]="product?.valueRating"
                   [readonly]="true"
                   [cancel]="false"
                 ></p-rating>
                 <div class="flex align-items-center gap-3">
                   <span class="flex align-items-center gap-2">
                     <i class="pi pi-tag"></i>
-                    <span class="font-semibold">{{
-                      product.category
-                    }}</span>
+                    <span class="font-semibold">{{ product?.category.name }}</span>
                   </span>
                   <p-tag
-                    [value]="product.selectedStatus"
+                    [value]="product?.selectedStatus.name"
                     [severity]="getSeverity(product)"
                   ></p-tag>
                 </div>
+              </div>
+              <div>
+                <h6 class="mb-3 mt-3">{{product?.companyName}}</h6>
+                <p class="line-height-base">
+                  {{ product?.description }}
+                </p>
               </div>
               <div
                 class="flex sm:flex-column align-items-center sm:align-items-end gap-3 sm:gap-2"
               >
                 <span class="text-2xl font-semibold">{{
-                  "$" + product.priceStacked
+                  "$" + product?.priceStacked
                 }}</span>
                 <button
                   pButton
                   icon="pi pi-shopping-cart"
                   class="md:align-self-end mb-2 p-button-rounded"
-                  [disabled]="product.selectedStatus === 'OUTOFSTOCK'"
+                  [disabled]="product?.selectedStatus.name === 'OUTOFSTOCK'"
                 ></button>
               </div>
             </div>
@@ -85,36 +93,50 @@
       </div>
     </ng-template>
     <ng-template let-product pTemplate="gridItem">
-      <div class="col-12 sm:col-6 lg:col-12 xl:col-4 p-2">
-        <a [routerLink]="['/pages/product',product.id]" class="product-id">
+      <div class="col-12 sm:col-6 lg:col-12 xl:col-4 p-2 product-card">
+        <a [routerLink]="['/pages/product', product.id]" class="product-id">
           <div class="p-4 border-1 surface-border surface-card border-round">
             <div
               class="flex flex-wrap align-items-center justify-content-between gap-2"
             >
               <span class="flex align-items-center gap-2">
                 <i class="pi pi-tag"></i>
-                <span class="font-semibold">{{ product.category }}</span>
+                <span class="font-semibold">{{ product?.category.name }}</span>
               </span>
               <p-tag
-                [value]="product.selectedStatus"
+                [value]="product.selectedStatus.name"
                 [severity]="getSeverity(product)"
               ></p-tag>
             </div>
             <div class="flex flex-column align-items-center gap-3 py-5">
               <img
                 class="w-9 shadow-2 border-round"
-                [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.file" [alt]="product.name"
+                [src]="getFileUrl(product?.file)"
+                [alt]="product?.name"
               />
-              <div class="text-2xl font-bold">{{ product.name }}</div>
+              <!-- <ng-template #defaultImage>
+                  <img
+                    class="w-9 shadow-2 border-round"
+                    src="assets/images/angular.jpeg"
+                    alt="Default Image"
+                  />
+                </ng-template> -->
+              <div class="text-2xl font-bold">{{ product?.name }}</div>
               <p-rating
-                [ngModel]="product.rating"
+                [ngModel]="product.valueRating"
                 [readonly]="true"
                 [cancel]="false"
               ></p-rating>
             </div>
+            <div>
+              <h6 class="mb-3 mt-3">{{ product?.companyName }}</h6>
+              <p class="line-height-base">
+                {{ product?.description }}
+              </p>
+            </div>
             <div class="flex align-items-center justify-content-between">
               <span class="text-2xl font-semibold">{{
-                "$" + product.priceStacked
+                "$" + product?.priceStacked
               }}</span>
               <button
                 pButton
