--- a/src/app/pages/components/product/card-detail/card-detail.component.html
+++ b/src/app/pages/components/product/card-detail/card-detail.component.html
@@ -80,12 +80,7 @@
     <p-tabPanel header="Details">
       <div class="text-900 font-bold text-3xl mb-4 mt-2">Product Details</div>
       <p class="line-height-3 text-600 p-0 mx-0 mt-0 mb-4">
-        Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque
-        in. Duis ultricies lacus sed turpis tincidunt id. Sed tempus urna et
-        pharetra. Metus vulputate eu scelerisque felis imperdiet proin
-        fermentum. Venenatis urna cursus eget nunc scelerisque viverra mauris
-        in. Viverra justo nec ultrices dui sapien eget mi proin. Laoreet
-        suspendisse interdum consectetur libero id faucibus.
+        {{product?.description}}
       </p>
 
       <div class="grid">
