--- a/src/app/dashboard/components/product-management/get-product/get-product.component.html
+++ b/src/app/dashboard/components/product-management/get-product/get-product.component.html
@@ -11,11 +11,11 @@
       currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
       [globalFilterFields]="[
         'name',
-        'country.name',
-        'representative.name',
-        'status'
+        'product.price',
+        'product.category.name',
+        'product.selectedStatus.name'
       ]"
-      [tableStyle]="{ 'min-width': '75rem' }"
+      styleClass="table"
     >
       <ng-template pTemplate="caption">
         <div class="flex flex-row justify-content-between align-items-center">
@@ -26,7 +26,7 @@
               <span class="button-style">
                 <button
                   class="button"
-                  [routerLink]="['/product-management', 'add-product']"
+                  [routerLink]="['/creoter/product-management', 'add-product']"
                 >
                   <i class="pi pi-plus" style="color: white"></i> Ekle
                 </button>
@@ -57,7 +57,7 @@
           <th style="width: 10%">Quantity</th>
           <th style="width: 10%">Status</th>
           <th style="width: 10%">Category</th>
-          <th style="width: 10%">Description</th>
+          <th style="width: 10%">Marka Adı</th>
           <th style="width: 10%">İşlemler</th>
         </tr>
       </ng-template>
@@ -68,40 +68,31 @@
           <td>
             <img
               class="w-9 shadow-2 border-round"
-              [src]="
-                'https://primefaces.org/cdn/primeng/images/demo/product/' +
-                product.file
-              "
+              [src]="getFileUrl(product?.file)"
               [alt]="product.name"
             />
           </td>
-          <td>{{ product.priceStacked }}</td>
-          <td>{{ product.quantity }}</td>
+          <td>{{ product?.priceStacked }}</td>
+          <td>{{ product?.quantity }}</td>
           <td>
             <p-tag
-              [value]="product.selectedStatus && product.selectedStatus.name
-              ? product.selectedStatus.name
-              : product.selectedStatus"
-              [severity]="getSeverity(product.selectedStatus && product.selectedStatus.name
-              ? product.selectedStatus.name
-              : product.selectedStatus)"
+              [value]="product?.selectedStatus.name"
+              [severity]="getSeverity(product?.selectedStatus.name)"
             ></p-tag>
           </td>
           <td>
             {{
-              product.category && product.category.name
-                ? product.category.name
-                : product.category
+              product?.category.name
             }}
           </td>
-          <td>{{ product.description }}</td>
+          <td>{{ product?.companyName }}</td>
           <td>
             <div
               class="flex flex-row justify-content-start align-content-center w-21rem"
             >
               <div>
                 <span class="button-style">
-                  <button class="button">
+                  <button class="button" [routerLink]="['/creoter/product-management','update-product' , product.id]">
                     <i class="pi pi-pencil" style="color: white"></i> Düzenle
                   </button>
                 </span>
