--- a/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
+++ b/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
@@ -4,6 +4,7 @@
   <div class="text-900 font-medium text-4xl mb-4">{{'favoritesForm.populerText' | transloco}}</div>
   <div class="grid -mt-3 -ml-3 -mr-3">
     <div class="col-12 md:col-6 lg:col-4" *ngFor="let product of product">
+
       <div class="p-2">
         <div class="shadow-2 surface-card-parent border-round">
           <div class="relative mb-3">
@@ -19,10 +20,10 @@
             />
           </div>
           <div class="flex justify-content-between align-items-start mb-3">
-            <span class="text-900 font-medium text-xl">{{product?.name}}</span>
+            <span class="text-900 font-medium text-xl">{{product?.name| truncate:15}}</span>
           </div>
           <p class="mt-0 mb-3 text-700 line-height-3">
-            {{product?.description}}
+            {{product?.description | truncate:100}}
           </p>
 
           <div class="flex flex-row w-full justify-content-between">
